cambios en foto de staff

--- a/staff.html
+++ b/staff.html
@@ -42,30 +42,31 @@
 
     <p>Estos son los miembros de nuestro Staff que se contactaran contigo</p>
 
-    <ul class="lista-staff">
+    <ul class="lista-staff staff-page">
         <li>
-            <img src="Imagenes/images.jpg" width="110" alt="Foto del miembro del Staff"> <a
+            <img class="image-staff" src="Imagenes/Horacio.png" width="110" alt="Foto del miembro del Staff"> <a
                 href="Instagram.com/HoracioStaff">
                 <p>Horacio</p>
             </a>
         </li>
         <li>
-            <img src="Imagenes/descarga.jpg" alt="Foto del miembro del Staff" width="120"><a
+            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="120"><a
                 href="Instagram.com/CarmenStaff">
                 <p>Carmen</p>
             </a>
         </li>
         <li>
-            <img src="imagenes/335443_20211223005531.jpg" width="100" alt="Foto del miembro del Staff"><a
+            <img class="image-staff" src="imagenes/Carlos.png" width="110" alt="Foto del miembro del Staff">
+            <a
                 href="Instagram.com/Carlos">
                 <p>Carlos</p>
             </a>
         </li>
+
     </ul>
 
-    <p class="parrafo-staff">Rellena los campos correspondientes y nos comunicaremos contigo</p>
-
-    <ul>
+    <ul class="campo-rellenar staff-page">
+        <p class="parrafo-staff staff-page">Rellena los campos correspondientes y nos comunicaremos contigo</p>
         <li>
             <p>Nombre:</p>
             <!--Acá abria un campo para rellenar con el nombre-->
