--- a/staff.html
+++ b/staff.html
@@ -57,8 +57,7 @@
         </li>
         <li>
             <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff">
-            <a
-                href="Instagram.com/Carlos">
+            <a href="Instagram.com/Carlos">
                 <p>Carlos</p>
             </a>
         </li>
