--- a/whitelist.html
+++ b/whitelist.html
@@ -45,7 +45,8 @@
         </p>
 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgslLYumO8tH7K_4PBQo4UKWzR742zAKwNt0Lp4VLGPaR9TA/viewform">
-            <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400" alt="Foto de apertura de whitelist"></a>
+            <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400"
+                alt="Foto de apertura de whitelist"></a>
 
     </section>
 
