--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>HorizonRP</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -92,6 +96,8 @@
 
     </footer>
     <!-- Fin Footer -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js">
 </body>
 
 </html>
