--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
     <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
 
 
-    <nav class="nav-container">
-        <ul class="nav-content">
-            <li>
-                <a href="Foro.html">Foro</a>
-                </il>
-            <li>
-                <a href="normas.html">Normas</a>
-            </li>
-            <li>
-                <a href="whitelist.html">Whitelist</a>
-            </li>
-            <li>
-                <a href="staff.html">Staff</a>
-            </li>
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-transparent">
+          <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3 text-light" href="sraff.html">STAFF</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
 
     <!-- Fin Header -->
@@ -48,15 +50,36 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-    <div class="images">
-        <img class="image-1" src="Imagenes/roppo.png" width="299" alt="foto ingame horizonrp">
-
-        <img class="image-2" src="Imagenes/SK_hospi.png" width="329" alt="foto ingame horizonrp">
-
-        <img class="image-3" src="Imagenes/unknown (1).png" width="262" alt="foto ingame horizonrp">
-
-        <img class="image-4" src="Imagenes/unknown (2).png" width="262" alt="Foto ingame horizonrp">
-    </div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Imagenes/roppo.png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/SK_hospi.png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/unknown (2).png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
     <!-- Fin del contenido -->
 
