--- a/foro.html
+++ b/foro.html
@@ -9,8 +9,8 @@
 
     <title>HorizonRP</title>
 
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 
 </head>
 
@@ -22,21 +22,23 @@
         <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
 
 
-        <nav class="nav-container">
-            <ul class="nav-content">
-                <li>
-                    <a class="foro" href="Foro.html">Foro</a>
-                    </il>
-                <li>
-                    <a class="normas" href="normas.html">Normas</a>
-                </li>
-                <li>
-                    <a class="whitelist" href="whitelist.html">Whitelist</a>
-                </li>
-                <li>
-                    <a class="staff" href="staff.html">Staff</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-transparent">
+            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="sraff.html">STAFF</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
 
     </header>
@@ -84,4 +86,5 @@
     <!-- Fin Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
