--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
 
 
     <nav class="navbar navbar-expand-lg bg-transparent">
-          <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-3 text-light" href="sraff.html">STAFF</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-3 text-light" href="sraff.html">STAFF</a>
+                </li>
             </ul>
-          </div>
-      </nav>
+        </div>
+    </nav>
 
 
     <!-- Fin Header -->
@@ -50,36 +50,38 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
                 <img src="Imagenes/roppo.png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagenes/SK_hospi.png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagenes/unknown (2).png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
-              </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+            <div class="carousel-item">
+                <img src="Imagenes/SK_hospi.png" class="d-block w-50 p-3 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="Imagenes/unknown (2).png" class="d-block w-50 p-3 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="Imagenes/unknown (3).png" class="d-block w-50 p-3 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="Imagenes/unknown (4).png" class="d-block w-50 p-3 mx-auto" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <!-- Fin del contenido -->
 
