arreglo de vinculo

--- a/whitelist.html
+++ b/whitelist.html
@@ -35,7 +35,7 @@
                   <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fs-3 text-light" href="sraff.html">STAFF</a>
+                  <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
                 </li>
               </ul>
             </div>
