agregado de Accordion en foro con cambios de color  bg y text

--- a/foro.html
+++ b/foro.html
@@ -45,7 +45,42 @@
 
     <!-- Fin Header -->
 
-    <!-- El contenido de esta sección seria como cualquier foro, discusiones abiertas sobre dudas, bugs, etc. Cosas relacionadas al servidor  -->
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              TECLAS IMPORTANTES
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsa optio molestias provident consequatur nemo iure, perspiciatis illum? Molestias ut facere repudiandae voluptates pariatur. Vel veniam maxime consectetur quas eius.
+            Soluta dolorem, vitae eaque perspiciatis consequuntur veritatis, nam doloremque doloribus incidunt, totam optio quod perferendis! Repellat autem, temporibus laudantium iusto magnam, dolores corporis saepe eius ut, minus placeat vero a!</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              CONSEJOS
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, exercitationem error. Fugit veniam rem magnam mollitia architecto natus inventore sunt quaerat at beatae iusto vero, iure, consequatur facere dolorum ut?
+            Inventore nesciunt aspernatur nostrum hic animi sint debitis voluptatibus et at est quae illum cum quas, possimus repellat veritatis quidem, voluptate, dolores deleniti quos voluptas dolorum amet voluptatem obcaecati. Mollitia?</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              ARREGLOS EN EL SERVER
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores tempore similique eligendi, consequuntur maiores dolor ea voluptatibus distinctio rem, maxime deserunt sequi veniam, nobis corporis ab doloremque architecto cupiditate.
+            Atque cum tempora quae rerum, similique provident assumenda quos quis officiis illum nobis fuga, hic tempore accusamus quasi, saepe blanditiis ullam eum perspiciatis minus. Ratione laborum qui quis nihil laboriosam.
+            Qui ratione quas rerum vero tempora eius reprehenderit. Maxime quisquam cupiditate sit vero numquam! Eius vero dicta voluptatem eum at, aliquam ea, excepturi voluptas amet autem suscipit iure sunt! Laborum.</div>
+          </div>
+        </div>
+      </div>
 
 
     <!-- Footer -->
