--- a/staff.html
+++ b/staff.html
@@ -50,20 +50,20 @@
 
     <ul class="lista-staff staff-page">
         <li>
-            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a
+            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a class="text-decoration-none"
                 href="Instagram.com/HoracioStaff">
                 <p>Horacio</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="110"><a
+            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="110"><a class="text-decoration-none"
                 href="Instagram.com/CarmenStaff">
                 <p>Carmen</p>
             </a>
         </li>
         <li>
             <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff">
-            <a href="Instagram.com/Carlos">
+            <a class="text-decoration-none" href="Instagram.com/Carlos">
                 <p>Carlos</p>
             </a>
         </li>
