cambios en staff, rellenado de espacios

--- a/staff.html
+++ b/staff.html
@@ -67,7 +67,36 @@
                 <p>Carlos</p>
             </a>
         </li>
-
+        <li>
+            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff">
+            <a class="text-decoration-none" href="Instagram.com/Hugo">
+                <p>Hugo</p>
+            </a>
+        </li>
+        <li>
+            <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff">
+            <a class="text-decoration-none" href="Instagram.com/Lucas">
+                <p>Lucas</p>
+            </a>
+        </li>
+        <li>
+            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff">
+            <a class="text-decoration-none" href="Instagram.com/Cam">
+                <p>Cami</p>
+            </a>
+        </li>
+        <li>
+            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff">
+            <a class="text-decoration-none" href="Instagram.com/Sofi">
+                <p>Sofia</p>
+            </a>
+        </li>
+        <li>
+            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff">
+            <a class="text-decoration-none" href="Instagram.com/Agus">
+                <p>Agus</p>
+            </a>
+        </li>
     </ul>
 
     <ul class="campo-rellenar staff-page">
