agregado de boton y config

--- a/staff.html
+++ b/staff.html
@@ -99,8 +99,9 @@
         </li>
     </ul>
 
+    <p class="parrafo-staff staff-page">Rellena los campos correspondientes y nos comunicaremos contigo</p>
+
     <ul class="campo-rellenar staff-page">
-        <p class="parrafo-staff staff-page">Rellena los campos correspondientes y nos comunicaremos contigo</p>
         <li>
             <p>Nombre:</p>
             <!--Acá abria un campo para rellenar con el nombre-->
@@ -117,7 +118,7 @@
             <p>Escribe tu duda, queja o problema:
             </p> <!-- Un campo de texto para que nos digan por qué razon quiere comunicarse-->
         </li>
-        <p><br>ENVIAR</p>
+        <button type="button" class="btn btn-dark btn-lg ms-auto p-2">ENVIAR</button>
     </ul>
 
     <!-- Footer -->
