--- a/whitelist.html
+++ b/whitelist.html
@@ -48,14 +48,15 @@
     <section class="sec-white">
         <p>
             Para realizar la Whitelist oral primero deben realizar el formulario
-        </p>
 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgslLYumO8tH7K_4PBQo4UKWzR742zAKwNt0Lp4VLGPaR9TA/viewform">
             <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400"
                 alt="Foto de apertura de whitelist"></a>
+        </p>
+
+        <p class="text-right">LUEGO DE COMPLETAR EL FORMULARIO SE NOTIFICARA LA APROBACIÓN DEL MISMO DENTRO DE NUESTRO DISCORD (CLICKEAR ICONO DE DISCORD) UNA VEZ APROBADO Y DENTRO DE NUESTRO DISCORD, PODRA REALIZAR LA WHITELIST ORAL, PARA EVALUAR SI ESTA APTO PARA JUGAR EN NUESTRO SERVIDOR. BIENVENIDO Y MUCHA SUERTE!</p>
 
     </section>
-
 
     <!-- Fin del contenido -->
 
