Agregado de iframe twitter (falta arreglar)

--- a/foro.html
+++ b/foro.html
@@ -2,124 +2,151 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 
-    <title>HorizonRP</title>
+  <title>HorizonRP</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 
 </head>
 
 <body>
 
-    <!-- Header -->
+  <!-- Header -->
 
-    <header>
-        <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
-
-
-        <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-    </header>
-
-    <!-- Fin Header -->
-
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              TECLAS IMPORTANTES
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsa optio molestias provident consequatur nemo iure, perspiciatis illum? Molestias ut facere repudiandae voluptates pariatur. Vel veniam maxime consectetur quas eius.
-            Soluta dolorem, vitae eaque perspiciatis consequuntur veritatis, nam doloremque doloribus incidunt, totam optio quod perferendis! Repellat autem, temporibus laudantium iusto magnam, dolores corporis saepe eius ut, minus placeat vero a!</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              CONSEJOS
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, exercitationem error. Fugit veniam rem magnam mollitia architecto natus inventore sunt quaerat at beatae iusto vero, iure, consequatur facere dolorum ut?
-            Inventore nesciunt aspernatur nostrum hic animi sint debitis voluptatibus et at est quae illum cum quas, possimus repellat veritatis quidem, voluptate, dolores deleniti quos voluptas dolorum amet voluptatem obcaecati. Mollitia?</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              ARREGLOS EN EL SERVER
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse bg-dark text-light" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores tempore similique eligendi, consequuntur maiores dolor ea voluptatibus distinctio rem, maxime deserunt sequi veniam, nobis corporis ab doloremque architecto cupiditate.
-            Atque cum tempora quae rerum, similique provident assumenda quos quis officiis illum nobis fuga, hic tempore accusamus quasi, saepe blanditiis ullam eum perspiciatis minus. Ratione laborum qui quis nihil laboriosam.
-            Qui ratione quas rerum vero tempora eius reprehenderit. Maxime quisquam cupiditate sit vero numquam! Eius vero dicta voluptatem eum at, aliquam ea, excepturi voluptas amet autem suscipit iure sunt! Laborum.</div>
-          </div>
-        </div>
-      </div>
+  <header>
+    <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
 
 
-    <!-- Footer -->
-    <footer class="footer-container">
-
-        <ul class="redes-content">
-            <li>
-
-                <a href="https://www.instagram.com/horizonrp_gta/">
-                    <img src="Imagenes/Instagram.png" width="30" alt="logo instagram">
-                </a>
-
-                <a href="https://twitter.com/HorizonRP_GTA">
-                    <img src="Imagenes/Twitter.png" width="30" alt="logo twitter">
-                </a>
-
-            </li>
-
-            <li>
-                <a href="https://discord.com/invite/XmKyEhnZG2">
-                    <img src="Imagenes/Discord.png" width="35" alt="logo discord">
-                </a>
-
-
-                <a href="https://www.twitch.tv/horizonserver">
-                    <img src="Imagenes/Twitch_1.png" width="35" alt="logo twitch">
-                </a>
-
-            </li>
-
+    <nav class="navbar navbar-expand-lg bg-transparent">
+      <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
+          </li>
         </ul>
+      </div>
+    </nav>
+
+  </header>
+
+  <!-- Fin Header -->
+
+  <div class="foro-page accordion accordion-flush" id="accordionFlushExample">
+    <div class="foro1 accordion-item">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          TECLAS IMPORTANTES
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse bg-dark text-light"
+        aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsa optio molestias
+          provident consequatur nemo iure, perspiciatis illum? Molestias ut facere repudiandae voluptates pariatur. Vel
+          veniam maxime consectetur quas eius.
+          Soluta dolorem, vitae eaque perspiciatis consequuntur veritatis, nam doloremque doloribus incidunt, totam
+          optio quod perferendis! Repellat autem, temporibus laudantium iusto magnam, dolores corporis saepe eius ut,
+          minus placeat vero a!</div>
+      </div>
+    </div>
+    <div class="foro2 accordion-item">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          CONSEJOS
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse bg-dark text-light"
+        aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, exercitationem
+          error. Fugit veniam rem magnam mollitia architecto natus inventore sunt quaerat at beatae iusto vero, iure,
+          consequatur facere dolorum ut?
+          Inventore nesciunt aspernatur nostrum hic animi sint debitis voluptatibus et at est quae illum cum quas,
+          possimus repellat veritatis quidem, voluptate, dolores deleniti quos voluptas dolorum amet voluptatem
+          obcaecati. Mollitia?</div>
+      </div>
+    </div>
+    <div class="foro3 accordion-item">
+      <h2 class="accordion-header" id="flush-headingThree">
+        <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+          data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          ARREGLOS EN EL SERVER
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse bg-dark text-light"
+        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam asperiores tempore
+          similique eligendi, consequuntur maiores dolor ea voluptatibus distinctio rem, maxime deserunt sequi veniam,
+          nobis corporis ab doloremque architecto cupiditate.
+          Atque cum tempora quae rerum, similique provident assumenda quos quis officiis illum nobis fuga, hic tempore
+          accusamus quasi, saepe blanditiis ullam eum perspiciatis minus. Ratione laborum qui quis nihil laboriosam.
+          Qui ratione quas rerum vero tempora eius reprehenderit. Maxime quisquam cupiditate sit vero numquam! Eius vero
+          dicta voluptatem eum at, aliquam ea, excepturi voluptas amet autem suscipit iure sunt! Laborum.</div>
+      </div>
+    </div>
+
+    <div>
+      <a class="twit-foro twitter-timeline" data-width="350" data-height="350" data-theme="dark"
+        href="https://twitter.com/HorizonRP_GTA?ref_src=twsrc%5Etfw">Tweets by HorizonRP_GTA</a>
+      <script class="twit-foro" async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
+
+  </div>
+
+  
+
+  <!-- Footer -->
+  <footer class="footer-container">
+
+    <ul class="redes-content">
+      <li>
+
+        <a href="https://www.instagram.com/horizonrp_gta/">
+          <img src="Imagenes/Instagram.png" width="30" alt="logo instagram">
+        </a>
+
+        <a href="https://twitter.com/HorizonRP_GTA">
+          <img src="Imagenes/Twitter.png" width="30" alt="logo twitter">
+        </a>
+
+      </li>
+
+      <li>
+        <a href="https://discord.com/invite/XmKyEhnZG2">
+          <img src="Imagenes/Discord.png" width="35" alt="logo discord">
+        </a>
+
+
+        <a href="https://www.twitch.tv/horizonserver">
+          <img src="Imagenes/Twitch_1.png" width="35" alt="logo twitch">
+        </a>
+
+      </li>
+
+    </ul>
 
 
 
-        <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
+    <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
 
-    </footer>
-    <!-- Fin Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  </footer>
+  <!-- Fin Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
