Agregado Grid-area y mediaquery para video del index

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <!-- Fin Header -->
 
     <!-- Contenido (imagenes y videos del server) -->
-
-    <iframe class="Video" width="1280" height="720" src="https://www.youtube.com/embed/1GpD1GmAMtM"
+    <div class="video-container">
+    <iframe class="video" width="1280" height="720" src="https://www.youtube.com/embed/1GpD1GmAMtM"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
-
+    </div>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
