modificacion en parte de foro y agregado media a pestaña whitelist

--- a/foro.html
+++ b/foro.html
@@ -98,17 +98,11 @@
           dicta voluptatem eum at, aliquam ea, excepturi voluptas amet autem suscipit iure sunt! Laborum.</div>
       </div>
     </div>
-
-    <div>
-      <a class="twit-foro twitter-timeline" data-width="350" data-height="350" data-theme="dark"
-        href="https://twitter.com/HorizonRP_GTA?ref_src=twsrc%5Etfw">Tweets by HorizonRP_GTA</a>
-      <script class="twit-foro" async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-
-
   </div>
 
-  
+  <div>
+    <a class="twitter twitter-timeline" data-width="1200" data-height="350" data-theme="dark" href="https://twitter.com/HorizonRP_GTA?ref_src=twsrc%5Etfw">Tweets by HorizonRP_GTA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
 
   <!-- Footer -->
   <footer class="footer-container">
