agregado de media a staff.html

--- a/staff.html
+++ b/staff.html
@@ -118,7 +118,7 @@
             <p>Escribe tu duda, queja o problema:
             </p> <!-- Un campo de texto para que nos digan por qué razon quiere comunicarse-->
         </li>
-        <button type="button" class="btn btn-dark btn-lg ms-auto p-2">ENVIAR</button>
+        <button type="button" class="boton btn btn-dark btn-lg ms-auto p-2">ENVIAR</button>
     </ul>
 
     <!-- Footer -->
