--- a/staff.html
+++ b/staff.html
@@ -50,14 +50,14 @@
 
     <ul class="lista-staff staff-page">
         <li>
-            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a class="text-decoration-none"
-                href="Instagram.com/HoracioStaff">
+            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a
+                class="text-decoration-none" href="Instagram.com/HoracioStaff">
                 <p>Horacio</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="110"><a class="text-decoration-none"
-                href="Instagram.com/CarmenStaff">
+            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="110"><a
+                class="text-decoration-none" href="Instagram.com/CarmenStaff">
                 <p>Carmen</p>
             </a>
         </li>
