--- a/whitelist.html
+++ b/whitelist.html
@@ -24,20 +24,20 @@
 
         <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
-                </li>
-              </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" aria-current="page" href="foro.html">FORO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="normas.html">NORMAS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="whitelist.html">WHITELIST</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -49,12 +49,15 @@
         <p>
             Para realizar la Whitelist oral primero deben realizar el formulario
 
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgslLYumO8tH7K_4PBQo4UKWzR742zAKwNt0Lp4VLGPaR9TA/viewform">
-            <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400"
-                alt="Foto de apertura de whitelist"></a>
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdgslLYumO8tH7K_4PBQo4UKWzR742zAKwNt0Lp4VLGPaR9TA/viewform">
+                <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400"
+                    alt="Foto de apertura de whitelist"></a>
         </p>
 
-        <p class="text-right">LUEGO DE COMPLETAR EL FORMULARIO SE NOTIFICARA LA APROBACIÓN DEL MISMO DENTRO DE NUESTRO DISCORD (CLICKEAR ICONO DE DISCORD) UNA VEZ APROBADO Y DENTRO DE NUESTRO DISCORD, PODRA REALIZAR LA WHITELIST ORAL, PARA EVALUAR SI ESTA APTO PARA JUGAR EN NUESTRO SERVIDOR. BIENVENIDO Y MUCHA SUERTE!</p>
+        <p class="text-right">LUEGO DE COMPLETAR EL FORMULARIO SE NOTIFICARA LA APROBACIÓN DEL MISMO DENTRO DE NUESTRO
+            DISCORD (CLICKEAR ICONO DE DISCORD) UNA VEZ APROBADO Y DENTRO DE NUESTRO DISCORD, PODRA REALIZAR LA
+            WHITELIST ORAL, PARA EVALUAR SI ESTA APTO PARA JUGAR EN NUESTRO SERVIDOR. BIENVENIDO Y MUCHA SUERTE!</p>
 
     </section>
 
