--- a/foro.html
+++ b/foro.html
@@ -101,7 +101,9 @@
   </div>
 
   <div>
-    <a class="twitter twitter-timeline" data-width="1200" data-height="350" data-theme="dark" href="https://twitter.com/HorizonRP_GTA?ref_src=twsrc%5Etfw">Tweets by HorizonRP_GTA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a class="twitter twitter-timeline" data-width="1200" data-height="350" data-theme="dark"
+      href="https://twitter.com/HorizonRP_GTA?ref_src=twsrc%5Etfw">Tweets by HorizonRP_GTA</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
   <!-- Footer -->
