carpeta base y list.scss

--- a/staff.html
+++ b/staff.html
@@ -48,7 +48,7 @@
 
     <p>Estos son los miembros de nuestro Staff que se contactaran contigo</p>
 
-    <ul class="lista-staff staff-page">
+    <ul class="list-staff staff-page">
         <li>
             <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a
                 class="text-decoration-none" href="Instagram.com/HoracioStaff">
@@ -99,7 +99,7 @@
         </li>
     </ul>
 
-    <p class="parrafo-staff staff-page">Rellena los campos correspondientes y nos comunicaremos contigo</p>
+    <p class="p-staff staff-page">Rellena los campos correspondientes y nos comunicaremos contigo</p>
 
     <ul class="campo-rellenar staff-page">
         <li>
