--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
     <title>HorizonRP</title>
 
@@ -19,7 +21,6 @@
     <!-- Header -->
 
     <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
-
 
     <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
@@ -40,10 +41,10 @@
         </div>
     </nav>
 
-
     <!-- Fin Header -->
 
     <!-- Contenido (imagenes y videos del server) -->
+
     <div class="video-container">
         <iframe class="video" width="1280" height="720" src="https://www.youtube.com/embed/1GpD1GmAMtM"
             title="YouTube video player" frameborder="0"
@@ -115,8 +116,6 @@
 
         </ul>
 
-
-
         <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
 
     </footer>
@@ -124,5 +123,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
