--- a/normas.html
+++ b/normas.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
     <title>HorizonRP</title>
 
     <!-- Bootstrap -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 
 </head>
@@ -19,7 +22,6 @@
     <!-- Header -->
 
     <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
-
 
     <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
@@ -39,9 +41,11 @@
             </ul>
         </div>
     </nav>
+
     <!-- Fin Header -->
 
     <!-- Contenido (Normas del servidor) -->
+
     <section class="rules-container">
         <img class="ruler-content rule-1" src="Imagenes/Normativa 1.png" width="900px" alt="Foto de Normativa 1">
         <img class="ruler-content rule-2" src="Imagenes/Normativa 2.png" width="900px" alt="Foto de Normativa 2">
@@ -54,8 +58,8 @@
         <img class="ruler-content rule-9" src="Imagenes/Normativa 9.png" width="900px" alt="Foto de Normativa 9">
     </section>
 
-
     <!-- Footer -->
+
     <footer class="footer-container">
 
         <ul class="redes-content">
@@ -85,13 +89,12 @@
 
         </ul>
 
-
-
         <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
 
     </footer>
+
     <!-- Fin Footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
