--- a/staff.html
+++ b/staff.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
     <title>HorizonRP</title>
 
@@ -20,7 +22,6 @@
 
     <header>
         <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
-
 
         <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
@@ -151,13 +152,12 @@
 
         </ul>
 
-
-
         <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
 
     </footer>
+
     <!-- Fin Footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
