--- a/whitelist.html
+++ b/whitelist.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
     <title>HorizonRP</title>
 
@@ -41,6 +43,7 @@
             </div>
         </nav>
     </header>
+
     <!-- Fin Header -->
 
     <!-- Contenido -->
@@ -93,13 +96,14 @@
 
         </ul>
 
-
-
         <p class="eslogan1">Buscamos una comunidad buscamos el mejor rol</p>
 
     </footer>
+    
     <!-- Fin Footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
