cambio de title y meta description para SEO

--- a/normas.html
+++ b/normas.html
@@ -9,7 +9,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>HorizonRP</title>
+    <!-- meta description -->
+    <meta name="description" content="Somos un servidor de rol de Grand Theft Auto V latinoamericano">
+    <meta name="keywords" content="Rol, Grand Theft Auto V, GTAV, HorizonRP GTAV, Horizon Roleplay">
+
+    <title>HorizonRP Home - Rol serio rol sano</title>
 
     <!-- Bootstrap -->
 
@@ -97,4 +101,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
