--- a/staff.html
+++ b/staff.html
@@ -9,7 +9,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>HorizonRP</title>
+    <!-- meta description -->
+    <meta name="description" content="Somos un servidor de rol de Grand Theft Auto V latinoamericano">
+    <meta name="keywords" content="Rol, Grand Theft Auto V, GTAV, HorizonRP GTAV, Horizon Roleplay">
+
+    <title>HorizonRP Staff - Rol serio rol sano</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
@@ -160,4 +164,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
