relleno de alts vacios

--- a/normas.html
+++ b/normas.html
@@ -51,15 +51,15 @@
     <!-- Contenido (Normas del servidor) -->
 
     <section class="rules-container">
-        <img class="ruler-content rule-1" src="Imagenes/Normativa 1.png" width="900px" alt="Foto de Normativa 1">
-        <img class="ruler-content rule-2" src="Imagenes/Normativa 2.png" width="900px" alt="Foto de Normativa 2">
-        <img class="ruler-content rule-3" src="Imagenes/Normativa 3.png" width="900px" alt="Foto de Normativa 3">
-        <img class="ruler-content rule-4" src="Imagenes/Normativa 4.png" width="900px" alt="Foto de Normativa 4">
-        <img class="ruler-content rule-5" src="Imagenes/Normativa 5.png" width="900px" alt="Foto de Normativa 5">
-        <img class="ruler-content rule-6" src="Imagenes/Normativa 6.png" width="900px" alt="Foto de Normativa 6">
-        <img class="ruler-content rule-7" src="Imagenes/Normativa 7.png" width="900px" alt="Foto de Normativa 7">
-        <img class="ruler-content rule-8" src="Imagenes/Normativa 8.png" width="900px" alt="Foto de Normativa 8">
-        <img class="ruler-content rule-9" src="Imagenes/Normativa 9.png" width="900px" alt="Foto de Normativa 9">
+        <img class="ruler-content rule-1" src="Imagenes/Normativa 1.png" width="900px" alt="Foto de Normativa HorizonRP 1">
+        <img class="ruler-content rule-2" src="Imagenes/Normativa 2.png" width="900px" alt="Foto de Normativa HorizonRP 2">
+        <img class="ruler-content rule-3" src="Imagenes/Normativa 3.png" width="900px" alt="Foto de Normativa HorizonRP 3">
+        <img class="ruler-content rule-4" src="Imagenes/Normativa 4.png" width="900px" alt="Foto de Normativa HorizonRP 4">
+        <img class="ruler-content rule-5" src="Imagenes/Normativa 5.png" width="900px" alt="Foto de Normativa HorizonRP 5">
+        <img class="ruler-content rule-6" src="Imagenes/Normativa 6.png" width="900px" alt="Foto de Normativa HorizonRP 6">
+        <img class="ruler-content rule-7" src="Imagenes/Normativa 7.png" width="900px" alt="Foto de Normativa HorizonRP 7">
+        <img class="ruler-content rule-8" src="Imagenes/Normativa 8.png" width="900px" alt="Foto de Normativa HorizonRP 8">
+        <img class="ruler-content rule-9" src="Imagenes/Normativa 9.png" width="900px" alt="Foto de Normativa HorizonRP 9">
     </section>
 
     <!-- Footer -->
