--- a/staff.html
+++ b/staff.html
@@ -42,7 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link fs-3 text-light" href="staff.html">STAFF</a>
                     </li>
-                </ul>
+           de HorizonRP      </ul>
             </div>
         </nav>
 
@@ -55,49 +55,49 @@
 
     <ul class="list-staff staff-page">
         <li>
-            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff"> <a
+            <img class="image-staff" src="Imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff de HorizonRP"> <a
                 class="text-decoration-none" href="Instagram.com/HoracioStaff">
                 <p>Horacio</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff" width="110"><a
+            <img class="image-staff" src="Imagenes/Carmen.png" alt="Foto del miembro del Staff de HorizonRP" width="110"><a
                 class="text-decoration-none" href="Instagram.com/CarmenStaff">
                 <p>Carmen</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Carlos">
                 <p>Carlos</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Hugo">
                 <p>Hugo</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Carlos.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Lucas">
                 <p>Lucas</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Cam">
                 <p>Cami</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Carmen.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Sofi">
                 <p>Sofia</p>
             </a>
         </li>
         <li>
-            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff">
+            <img class="image-staff" src="imagenes/Horacio.png" width="100" alt="Foto del miembro del Staff de HorizonRP">
             <a class="text-decoration-none" href="Instagram.com/Agus">
                 <p>Agus</p>
             </a>
