--- a/whitelist.html
+++ b/whitelist.html
@@ -55,7 +55,7 @@
             <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSdgslLYumO8tH7K_4PBQo4UKWzR742zAKwNt0Lp4VLGPaR9TA/viewform">
                 <img class="img-whitelist" src="imagenes/001-whitelist_Mesa_de_trabajo_1.jpg" width="400"
-                    alt="Foto de apertura de whitelist"></a>
+                    alt="Foto de apertura de whitelist horizonrp_gta"></a>
         </p>
 
         <p class="text-right">LUEGO DE COMPLETAR EL FORMULARIO SE NOTIFICARA LA APROBACIÓN DEL MISMO DENTRO DE NUESTRO
