--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/roppo.png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/roppo.png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/SK_hospi.png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/SK_hospi.png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/unknown (1).png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/unknown (2).png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/unknown (2).png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/unknown (3).png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/unknown (3).png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/unknown (4).png" class="d-block w-50 p-3 mx-auto" alt="...">
+                <img src="Imagenes/unknown (4).png" class="d-block w-50 p-3 mx-auto" alt="Imagen ingame horizonrp_gta">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
