agregado de boton NORMAS (modificado con B-trap y SASS/CSS) y agregado de media para imgs de reglas

--- a/normas.html
+++ b/normas.html
@@ -60,6 +60,8 @@
         <img class="ruler-content rule-7" src="Imagenes/Normativa 7.png" width="900px" alt="Foto de Normativa HorizonRP 7">
         <img class="ruler-content rule-8" src="Imagenes/Normativa 8.png" width="900px" alt="Foto de Normativa HorizonRP 8">
         <img class="ruler-content rule-9" src="Imagenes/Normativa 9.png" width="900px" alt="Foto de Normativa HorizonRP 9">
+
+        <a class="r-button text-decoration-none" href="https://drive.google.com/drive/folders/1AapXTgT5MMQ1qHiHhV3JsL1KHsu67OTM?usp=sharing">Normas</a>
     </section>
 
     <!-- Footer -->
