--- a/staff.html
+++ b/staff.html
@@ -25,7 +25,7 @@
     <!-- Header -->
 
     <header>
-        <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="500" alt="Logo HorizonRP"></a>
+        <a class="logo" href="index.html"><img src="Imagenes/logo-06.png" width="100%" alt="Logo HorizonRP"></a>
 
         <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
